--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^2.2.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.8",
     "react": "^18.1.0",
@@ -20,9 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.3"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
